--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "command-line-tool": "^0.8.0",
     "eslint": "^9.8.0",
     "prettier": "^3.4.0"
+  },
+  "dependencies": {
+    "lodash": "^4.16.1"
   }
 }
